[tool.poetry]
name = "dependable"
version = "0.1.0"
description = "Dependency injection system extracted from FastAPI"
authors = ["Dimitrios Flaco Mengidis  <tydeas.dr@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dmtrs/dependable"
include = ["dependable/py.typed"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.8.1"
yappi = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.0"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
mypy = "^0.790"
pytest-mypy = "^0.8.1"
pytest-watch = "^4.2.0"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
